# web-ach-new

./: .browsermcp-remote.config.json  .env  .env.example  .env.production  .env.production.example  .gitignore  .mcp.json  .vercelignore  ADMIN_GUIDE.md  ANALYTICS_COMPLETE.md  ANALYTICS_POSSIBILITIES.md  BLACKSTEEL_BRANDING_MEMORY.md  BROWSERMCP_ACTION_PLAN.md  BROWSERMCP_FINAL_REPORT.txt  BROWSERMCP_README.md  BROWSERMCP_TEST_RESULTS.md  BROWSER_MCP_COMMANDS.md  BROWSER_MCP_CONNECTION_FIX.md  BROWSER_MCP_FILES.txt  BROWSER_MCP_INDEX.md  BROWSER_MCP_QUICK_REF.txt  BROWSER_MCP_REMOTE_DIAGNOSTICS.sh  BROWSER_MCP_SETUP.md  BROWSER_MCP_SETUP_COMPLETE.md  BROWSER_MCP_TROUBLESHOOT.md  BUSINESS_STRATEGY.md  CLAUDE.md  CMS_USAGE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT-STATUS.md  DEVELOPMENT_STATE.md  FEATURES_COMPLETE.md  FIGMA_LAYOUT_BLACKSTEEL.md  FINAL_SUMMARY.md  FIXED_SSL.md  FUNCTIONALITY_CHECK.md  IMAGE-MIGRATION-STATUS.md  IMPLEMENTATION_SUMMARY.md  (+46 more)
scripts/strategy/: .env.example  DEMO_REPORT.html  IMPLEMENTATION_SUMMARY.md  NEO4J_ANALYTICS_COMPLETE.md  NEO4J_INTEGRATION_GUIDE.md  NEO4J_QUERIES_GUIDE.md  README.md  SETUP_GUIDE.md  TASKS_LOADED.txt  ac-heating-orchestrator.service  config.py  db.py  docker-compose.neo4j.yml  generate_report.py  generate_tasks.py  import_sample_tasks.py  import_strategy.py  import_web_content.py  learning_system.py  models.py  neo4j_dashboard.html  neo4j_db.py  neo4j_queries.cypher  orchestrator.py  pyproject.toml  run_orchestrator.py  run_orchestrator_simple.py  run_orchestrator_working.py  (+2 more)
(+225 files in other folders)
